<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/edit_marker_main"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5px"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="bottom"
		android:paddingTop="5px">
		<EditText
			android:id="@+id/edit_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/name"
			android:textSize="15px"
			android:singleLine="true"
			android:maxLength="255"
			android:gravity="fill_vertical"
			android:ems="12">
		</EditText>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ImageButton
				android:id="@+id/camera_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/image"
				android:layout_alignParentRight="true" />
		</RelativeLayout>
	</LinearLayout>
	<EditText
		android:id="@+id/edit_information"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:hint="@string/information"
		android:textSize="15px"
		android:singleLine="false"
		android:maxLength="2000000"
		android:gravity="top">
	</EditText>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/box"
		android:orientation="vertical">
		<!-- view1 goes on top -->
		<ViewSwitcher
			android:id="@+id/coord_flipper"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<LinearLayout
				android:id="@+id/coord_ll_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/latitude_label"
						android:textSize="16px"
						android:minEms="5"
						android:textStyle="bold" />
					<EditText
						android:id="@+id/edit_latitude"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/latitude"
						android:textSize="16px"
						android:singleLine="true"
						android:numeric="decimal|signed"
						android:maxLength="10"
						android:minEms="6" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/degree_north"
						android:textSize="16px" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/longitude_label"
						android:textSize="16px"
						android:minEms="5"
						android:textStyle="bold" />
					<EditText
						android:id="@+id/edit_longitude"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/longitude"
						android:textSize="16px"
						android:singleLine="true"
						android:numeric="decimal|signed"
						android:maxLength="10"
						android:minEms="6" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/degree_east"
						android:textSize="16px" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/coord_utm_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/northing_label"
						android:textSize="16px"
						android:minEms="5"
						android:textStyle="bold" />
					<EditText
						android:id="@+id/edit_utm_north"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/utm_north"
						android:textSize="16px"
						android:singleLine="true"
						android:numeric="integer|signed"
						android:maxLength="8"
						android:minEms="6" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/meters"
						android:textSize="16px" />
				</LinearLayout>
				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/easting_label"
						android:textSize="16px"
						android:minEms="5"
						android:textStyle="bold" />
					<EditText
						android:id="@+id/edit_utm_east"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/utm_east"
						android:textSize="16px"
						android:singleLine="true"
						android:numeric="integer|signed"
						android:maxLength="6"
						android:minEms="6" />
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/meters"
						android:textSize="16px" />
				</LinearLayout>
				<LinearLayout
					android:id="@+id/edit_utm_zone_row"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/zone_label"
						android:textSize="16px"
						android:minEms="5"
						android:textStyle="bold"
						android:layout_gravity="center_vertical" />
					<EditText
						android:id="@+id/edit_utm_zone"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/utm_zone"
						android:textSize="16px"
						android:singleLine="true"
						android:numeric="integer"
						android:maxLength="2"
						android:minEms="5"
						android:layout_gravity="center_vertical" />
					<Spinner
						android:id="@+id/hemisphere"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="16px"
						android:maxLength="4"
						android:entries="@array/hemisphere"
						android:layout_gravity="center_vertical" />
					<!-- android:entries="@array/hemisphere" -->
				</LinearLayout>
			</LinearLayout>
		</ViewSwitcher>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/altitude_label"
					android:textSize="16px"
					android:minEms="5"
					android:textStyle="bold" />
				<EditText
					android:id="@+id/edit_altitude"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="0"
					android:hint="@string/altitude"
					android:textSize="16px"
					android:singleLine="true"
					android:numeric="decimal|signed"
					android:maxLength="10"
					android:minEms="6" />
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/meters"
					android:textSize="16px" />
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="bottom"
		android:paddingTop="5px">
		<RadioGroup
			android:id="@+id/coord_switch_radio"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true">
			<RadioButton
				android:id="@+id/coord_switch_utm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/utm">
			</RadioButton>
			<RadioButton
				android:id="@+id/coord_switch_latlon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lat_lon">
			</RadioButton>
		</RadioGroup>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ImageButton
				android:id="@+id/cancel_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/cancel"
				android:layout_toLeftOf="@+id/save_btn" />
			<ImageButton
				android:id="@+id/save_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ok"
				android:layout_alignParentRight="true" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>