<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/edit_marker_main"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5px"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<EditText
		android:id="@+id/edit_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/name"
		android:textSize="16px"
		android:singleLine="true"
		android:maxLength="255" />
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/map"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<ImageView
			android:id="@+id/map_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/mapimage" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/created"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<TextView
			android:id="@+id/created"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/image_size"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<TextView
			android:id="@+id/size_x"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pixel"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text=","
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:id="@+id/size_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pixel"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/scale"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<TextView
			android:id="@+id/scale"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/meter_per_pixel"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/left_up"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<TextView
			android:id="@+id/left_up_latitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:id="@+id/left_up_longitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/right_down"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="4" />
		<TextView
			android:id="@+id/right_down_latitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
		<TextView
			android:id="@+id/right_down_longitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="1px"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:orientation="horizontal">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ImageButton
				android:id="@+id/cancel_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/cancel"
				android:layout_toLeftOf="@+id/save_btn"
				android:layout_alignParentBottom="true" />
			<ImageButton
				android:id="@+id/save_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ok"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>