<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/edit_marker_main"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5px"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<EditText
		android:id="@+id/edit_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/name"
		android:textSize="15px"
		android:singleLine="true"
		android:maxLength="255"
		android:gravity="fill_vertical"
		android:ems="12">
	</EditText>
	<EditText
		android:id="@+id/edit_information"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:hint="@string/information"
		android:textSize="15px"
		android:singleLine="false"
		android:maxLength="2000000"
		android:gravity="top">
	</EditText>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/created"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="5" />
		<TextView
			android:id="@+id/created"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/length"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="5" />
		<TextView
			android:id="@+id/length"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="center_vertical"
		android:paddingTop="3px">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/point_count"
			android:textSize="16px"
			android:textStyle="bold"
			android:minEms="5" />
		<TextView
			android:id="@+id/pointcount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="0"
			android:textSize="16px"
			android:singleLine="true" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_gravity="bottom"
		android:paddingTop="5px">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<ImageButton
				android:id="@+id/cancel_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/cancel"
				android:layout_toLeftOf="@+id/save_btn" />
			<ImageButton
				android:id="@+id/save_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ok"
				android:layout_alignParentRight="true" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>