<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/main_menu"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/org.tribosmap"
	android:background="#0000"
	android:orientation="vertical">
	<TextView
		android:layout_marginTop="5px"
		android:layout_marginLeft="8px"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#F00"
		android:shadowColor="#000"
		android:shadowRadius="0.5"
		android:shadowDx="1.3"
		android:shadowDy="1.3"
		android:text="last known position: "
		android:gravity="right" />
	<LinearLayout
		android:id="@+id/postext"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="5px"
		android:layout_marginLeft="8px"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="alt: "
			android:gravity="right" />
		<TextView
			android:id="@+id/lblAltitude"
			android:layout_width="75px"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="80000.0m" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="lat: "
			android:gravity="right" />
		<TextView
			android:id="@+id/lblLatitude"
			android:layout_height="wrap_content"
			android:layout_width="80px"
			android:textColor="#F00"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:shadowColor="#000"
			android:text="90.12345°N" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="lon:"
			android:gravity="right" />
		<TextView
			android:id="@+id/lblLongitude"
			android:layout_height="wrap_content"
			android:layout_width="75px"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="90.12345°E" />
	</LinearLayout>
	<TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical"
		android:layout_marginTop="15px">
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_marker_btn"
				android:padding="12px"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/main_marker_selector"
				app:text="@string/main_marker"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_map_btn"
				android:padding="12px"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/main_map_selector"
				app:text="@string/main_map"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_trace_btn"
				android:padding="12px"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/main_trace_selector"
				app:text="@string/main_trace"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
		</TableRow>
		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_create_marker_btn"
				android:padding="15px"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/create_marker_selector"
				app:text="@string/main_create_marker"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_import_btn"
				android:padding="15px"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/importf_selector"
				app:text="@string/main_map_import"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
			<org.tribosmap.frontend.common.ImageTextSwitchButton
				android:id="@+id/main_record_btn"
				android:padding="10px"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/record_trace_selector"
				app:text="@string/main_record_trace"
				app:src_off="@drawable/stop_record_trace_selector"
				app:text_off="@string/main_stop_record_trace"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextSwitchButton>
		</TableRow>
		<TableRow
			android:id="@+id/widget33"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal">
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_quit_btn"
				android:layout_centerInParent="true"
				android:layout_gravity="center_horizontal"
				android:padding="10px"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/main_quit_selector"
				app:text="@string/main_quit"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
			<org.tribosmap.frontend.common.ImageTextButton
				android:id="@+id/main_osmview_btn"
				android:layout_centerInParent="true"
				android:layout_gravity="center_horizontal"
				android:padding="10px"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#0000"
				android:clickable="true"
				app:src="@drawable/main_map_selector"
				app:text="@string/main_osmview"
				app:wrapLayout="@layout/image_text_button">
			</org.tribosmap.frontend.common.ImageTextButton>
		</TableRow>
	</TableLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="45px"
		android:layout_marginLeft="8px"
		android:layout_alignParentBottom="true">
		<TextView
			android:id="@+id/record_trace_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="recording, points: "
			android:gravity="right"
			android:visibility="invisible" />
		<TextView
			android:id="@+id/record_trace_pointcount"
			android:layout_width="55px"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="0"
			android:visibility="invisible"  />
		<TextView
			android:id="@+id/record_trace_text2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="distance: "
			android:visibility="invisible"
			 />
		<TextView
			android:id="@+id/record_trace_distance"
			android:layout_width="75px"
			android:layout_height="wrap_content"
			android:textColor="#F00"
			android:shadowColor="#000"
			android:shadowRadius="0.5"
			android:shadowDx="1.3"
			android:shadowDy="1.3"
			android:text="0" 
			android:visibility="invisible" />
	</LinearLayout>
</LinearLayout>